# libShapeDescriptor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/shapeDescriptor/: shapeDescriptor.h
include/shapeDescriptor/descriptors/: SHOTGenerator.cuh  SHOTGenerator.h  SHOTGenerator_v1.cuh  SHOTGenerator_v2.cuh  SHOTGenerator_v2_alt.cuh  SHOTGenerator_v3.cuh  SHOTGenerator_v4.cuh
include/shapeDescriptor/types/: float3.h
src/: main.cpp  naive_gpu.cu
src/shapeDescriptor/gpu/: quickIntersectionCountImageGenerator.cu  radialIntersectionCountImageGenerator.cu
src/shapeDescriptor/utilities/: CUDAContextCreator.cpp  SHOTLocalReferenceFrame.cpp  SHOTLocalReferenceFrame.cu  SHOTLocalReferenceFrame_v1.cu  SHOTLocalReferenceFrame_v2.cu  SHOTLocalReferenceFrame_v3.cu  SHOTLocalReferenceFrame_v4.cu  eigenValues.cu  eigenValues_v1.cu  eigenValues_v2.cu  eigenValues_v3.cu  eigenValues_v4.cu  fileutils.cpp
